cplussharp/vscode/rusttest/ncnntengine2rs/tengine_c_api.h

/* follow the std. UNIX log level definitioin */
enum log_level
{
    LOG_EMERG,
    LOG_ALERT,
    LOG_CRIT,
    LOG_ERR,
    LOG_WARNING,
    LOG_NOTICE,
    LOG_INFO,
    LOG_DEBUG
};
/* note: Android NN only define one event */
enum graph_exec_event
{
    GRAPH_EXEC_START,
    GRAPH_EXEC_SUSPEND,
    GRAPH_EXEC_RESUME,
    GRAPH_EXEC_ABORT,
    GRAPH_EXEC_DONE
};
/* todo: should add suspend? */
enum graph_exec_stat
{
    GRAPH_STAT_CREATED,
    GRAPH_STAT_READY,
    GRAPH_STAT_RUNNING,
    GRAPH_STAT_DONE,
    GRAPH_STAT_ERROR
};
enum device_policy
{
    DEFAULT_POLICY,
    LATENCY_POLICY,
    LOW_POWER_POLICY
};
typedef void* context_t;
typedef void* graph_t;
typedef void* tensor_t;
typedef void* node_t;
typedef int (*event_handler_t)(graph_t, int, void* arg);
typedef void (*log_print_t)(const char*);
/* graph exec options */
struct options
{
    int num_thread;
    int cluster;
    int precision;
    uint64_t affinity;
};
/* performance profiling records */

struct perf_info
{
    const char* name; /* node name */
    const char* dev_name; /* device name */
    uint32_t count;
    uint32_t min;
    uint32_t max;
    uint64_t total_time; /* us or cycle, depends on devices */
    uint32_t base; /* 1ms second time number */
};
struct custom_kernel_tensor
{
    int dim[MAX_SHAPE_DIM_NUM]; /* the shape dim array */
    int dim_num; /* valid entry number */
    int element_num;
    int element_size; /* determined  by data_type */
    int data_type;
    int dev_type; /* indicate the tensor belongs to CPU/GPU ... */
    int layout_type; /*  NCHW type or NHWC type*/

    /* quant info */
    int quant_type; /* int8, int16 or int32 */
    float* scale;
    int* zero_point;
    int* quant_number;

    void* data; /* pointer to host memory (virtual address) */
    void* dev_mem; /* refers to device memory block */
    void* mapped_mem; /* the mapped address for device memory block */
};