cplussharp/vscode/rusttest/ncnntengine2rs/tengine_c_api.rs

pub const log_level_LOG_EMERG: log_level = 0;
pub const log_level_LOG_ALERT: log_level = 1;
pub const log_level_LOG_CRIT: log_level = 2;
pub const log_level_LOG_ERR: log_level = 3;
pub const log_level_LOG_WARNING: log_level = 4;
pub const log_level_LOG_NOTICE: log_level = 5;
pub const log_level_LOG_INFO: log_level = 6;
pub const log_level_LOG_DEBUG: log_level = 7;
pub type log_level = ::std::os::raw::c_uint;
pub const graph_exec_event_GRAPH_EXEC_START: graph_exec_event = 0;
pub const graph_exec_event_GRAPH_EXEC_SUSPEND: graph_exec_event = 1;
pub const graph_exec_event_GRAPH_EXEC_RESUME: graph_exec_event = 2;
pub const graph_exec_event_GRAPH_EXEC_ABORT: graph_exec_event = 3;
pub const graph_exec_event_GRAPH_EXEC_DONE: graph_exec_event = 4;
pub type graph_exec_event = ::std::os::raw::c_uint;
pub const graph_exec_stat_GRAPH_STAT_CREATED: graph_exec_stat = 0;
pub const graph_exec_stat_GRAPH_STAT_READY: graph_exec_stat = 1;
pub const graph_exec_stat_GRAPH_STAT_RUNNING: graph_exec_stat = 2;
pub const graph_exec_stat_GRAPH_STAT_DONE: graph_exec_stat = 3;
pub const graph_exec_stat_GRAPH_STAT_ERROR: graph_exec_stat = 4;
pub type graph_exec_stat = ::std::os::raw::c_uint;
pub const device_policy_DEFAULT_POLICY: device_policy = 0;
pub const device_policy_LATENCY_POLICY: device_policy = 1;
pub const device_policy_LOW_POWER_POLICY: device_policy = 2;
pub type device_policy = ::std::os::raw::c_uint;
pub type context_t = *mut ::std::os::raw::c_void;
pub type graph_t = *mut ::std::os::raw::c_void;
pub type tensor_t = *mut ::std::os::raw::c_void;
pub type node_t = *mut ::std::os::raw::c_void;
pub type event_handler_t = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: graph_t,
        arg2: ::std::os::raw::c_int,
        arg: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int,
>;
pub type log_print_t =
    ::std::option::Option<unsafe extern "C" fn(arg1: *const ::std::os::raw::c_char)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct options {
    pub num_thread: ::std::os::raw::c_int,
    pub cluster: ::std::os::raw::c_int,
    pub precision: ::std::os::raw::c_int,
    pub affinity: u64,
}
#[test]
fn bindgen_test_layout_options() {
    assert_eq!(
        ::std::mem::size_of::<options>(),
        24usize,
        concat!("Size of: ", stringify!(options))
    );
    assert_eq!(
        ::std::mem::align_of::<options>(),
        8usize,
        concat!("Alignment of ", stringify!(options))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<options>())).num_thread as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(options),
            "::",
            stringify!(num_thread)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<options>())).cluster as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(options),
            "::",
            stringify!(cluster)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<options>())).precision as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(options),
            "::",
            stringify!(precision)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<options>())).affinity as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(options),
            "::",
            stringify!(affinity)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct perf_info {
    pub name: *const ::std::os::raw::c_char,
    pub dev_name: *const ::std::os::raw::c_char,
    pub count: u32,
    pub min: u32,
    pub max: u32,
    pub total_time: u64,
    pub base: u32,
}
#[test]
fn bindgen_test_layout_perf_info() {
    assert_eq!(
        ::std::mem::size_of::<perf_info>(),
        48usize,
        concat!("Size of: ", stringify!(perf_info))
    );
    assert_eq!(
        ::std::mem::align_of::<perf_info>(),
        8usize,
        concat!("Alignment of ", stringify!(perf_info))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<perf_info>())).name as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(perf_info),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<perf_info>())).dev_name as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(perf_info),
            "::",
            stringify!(dev_name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<perf_info>())).count as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(perf_info),
            "::",
            stringify!(count)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<perf_info>())).min as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(perf_info),
            "::",
            stringify!(min)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<perf_info>())).max as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(perf_info),
            "::",
            stringify!(max)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<perf_info>())).total_time as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(perf_info),
            "::",
            stringify!(total_time)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<perf_info>())).base as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(perf_info),
            "::",
            stringify!(base)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct custom_kernel_tensor {
    pub dim: [::std::os::raw::c_int; 4usize],
    pub dim_num: ::std::os::raw::c_int,
    pub element_num: ::std::os::raw::c_int,
    pub element_size: ::std::os::raw::c_int,
    pub data_type: ::std::os::raw::c_int,
    pub dev_type: ::std::os::raw::c_int,
    pub layout_type: ::std::os::raw::c_int,
    pub quant_type: ::std::os::raw::c_int,
    pub scale: *mut f32,
    pub zero_point: *mut ::std::os::raw::c_int,
    pub quant_number: *mut ::std::os::raw::c_int,
    pub data: *mut ::std::os::raw::c_void,
    pub dev_mem: *mut ::std::os::raw::c_void,
    pub mapped_mem: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_custom_kernel_tensor() {
    assert_eq!(
        ::std::mem::size_of::<custom_kernel_tensor>(),
        96usize,
        concat!("Size of: ", stringify!(custom_kernel_tensor))
    );
    assert_eq!(
        ::std::mem::align_of::<custom_kernel_tensor>(),
        8usize,
        concat!("Alignment of ", stringify!(custom_kernel_tensor))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<custom_kernel_tensor>())).dim as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(custom_kernel_tensor),
            "::",
            stringify!(dim)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<custom_kernel_tensor>())).dim_num as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(custom_kernel_tensor),
            "::",
            stringify!(dim_num)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<custom_kernel_tensor>())).element_num as *const _ as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(custom_kernel_tensor),
            "::",
            stringify!(element_num)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<custom_kernel_tensor>())).element_size as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(custom_kernel_tensor),
            "::",
            stringify!(element_size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<custom_kernel_tensor>())).data_type as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(custom_kernel_tensor),
            "::",
            stringify!(data_type)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<custom_kernel_tensor>())).dev_type as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(custom_kernel_tensor),
            "::",
            stringify!(dev_type)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<custom_kernel_tensor>())).layout_type as *const _ as usize
        },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(custom_kernel_tensor),
            "::",
            stringify!(layout_type)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<custom_kernel_tensor>())).quant_type as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(custom_kernel_tensor),
            "::",
            stringify!(quant_type)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<custom_kernel_tensor>())).scale as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(custom_kernel_tensor),
            "::",
            stringify!(scale)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<custom_kernel_tensor>())).zero_point as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(custom_kernel_tensor),
            "::",
            stringify!(zero_point)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<custom_kernel_tensor>())).quant_number as *const _ as usize
        },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(custom_kernel_tensor),
            "::",
            stringify!(quant_number)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<custom_kernel_tensor>())).data as *const _ as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(custom_kernel_tensor),
            "::",
            stringify!(data)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<custom_kernel_tensor>())).dev_mem as *const _ as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(custom_kernel_tensor),
            "::",
            stringify!(dev_mem)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<custom_kernel_tensor>())).mapped_mem as *const _ as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(custom_kernel_tensor),
            "::",
            stringify!(mapped_mem)
        )
    );
}
